--- a/app/src/main/res/layout/activity_pop.xml
+++ b/app/src/main/res/layout/activity_pop.xml
@@ -26,6 +26,6 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:padding="10sp"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@drawable/profile_default" />
 
 </LinearLayout>
