--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -18,7 +18,7 @@
             android:id="@+id/chatImage"
             android:layout_width="50sp"
             android:layout_height="50sp"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@drawable/profile_default" />
 
         <TextView
             android:id="@+id/message"
