--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -61,7 +61,7 @@
                 android:layout_marginStart="10sp"
                 android:layout_marginLeft="50dp"
                 android:padding="5sp"
-                android:src="@mipmap/ic_launcher" />
+                android:src="@drawable/profile_default" />
             <!--    android:layout_toEndOf="@+id/backButton"
            android:layout_toRightOf="@+id/backButton"-->
 
