--- a/app/src/main/res/layout/activity_fill_info.xml
+++ b/app/src/main/res/layout/activity_fill_info.xml
@@ -13,55 +13,53 @@
         android:layout_height="wrap_content"
         android:hint="Please fill all the informations"
         android:id="@+id/title"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:gravity="center"
         android:paddingBottom="20sp"/>
+
+    <TextView
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Name:"
+        android:textSize="12sp"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:hint="Name"
-        android:id="@+id/name"/>
+        android:id="@+id/name"
+        android:layout_marginBottom="10sp"
+        android:paddingTop="2sp"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Date of birth:"
+        android:textSize="12sp"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="DD/MM/YYYY - Date of birth"
+        android:hint="DD/MM/YYYY"
         android:ems="10"
         android:inputType="date"
-        android:id="@+id/date"/>
-
-<!--
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Tags separeted with #"
-        android:id="@+id/tagsEditText"
-        android:maxLines="5"/>
+        android:id="@+id/date"
+        android:paddingTop="2sp"/>
     <TextView
-        android:layout_width="match_parent"
+        android:layout_marginTop="10sp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="My Tags:"
-        android:id="@+id/myTagsTextView"
-        android:textSize="15sp"
-        android:gravity="center"
-        android:paddingBottom="0sp"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint=""
-        android:id="@+id/tagsTextView"
-        android:textSize="20sp"
-        android:gravity="center"
-        android:paddingBottom="0sp"/>
--->
+        android:text="Gender:"
+        android:textSize="12sp"/>
     <RadioGroup
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/radioGroup"
         android:orientation="horizontal"
-        android:layout_marginTop="10sp"
+        android:layout_marginTop="0sp"
         android:layout_marginBottom="10sp">
         <RadioButton
             android:layout_width="match_parent"
@@ -72,13 +70,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-
             android:text="Female"/>
     </RadioGroup>
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="NEXT"
-        android:id="@+id/register"/>
+        android:layout_marginTop="10sp"
+        android:layout_gravity="center"
+        android:layout_width="150sp"
+        android:layout_height="30sp"
+        android:text="Register"
+        android:id="@+id/register"
+        android:background = "@drawable/rounded_button"/>
 
 </LinearLayout>
