--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -7,12 +7,13 @@
     android:layout_height="match_parent"
     android:layout_gravity="center_horizontal"
     android:orientation="vertical"
-    android:padding="16dp"
-    tools:context=".LocationActivity">
 
+    tools:context=".LocationActivity">
+<!--
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="16dp">
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -73,9 +74,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:id="@+id/text_view5"/>
+-->
 
     <fragment
-        android:layout_marginTop="20sp"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/google_map"
