--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -8,46 +8,70 @@ tools:context=".RegistrationActivity"
 android:orientation="vertical"
     android:padding="50sp">
 
-    <EditText
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="text"
-        android:hint="Email"
-        android:id="@+id/email"/>
+        android:hint="Please fill all the informations"
+        android:id="@+id/title"
+        android:textSize="15sp"
+        android:gravity="center"
+        android:paddingBottom="20sp"/>
+
+    <TextView
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Name:"
+        android:textSize="12sp"/>
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:hint="Name"
-        android:id="@+id/name"/>
+        android:id="@+id/name"
+        android:layout_marginBottom="10sp"
+        android:paddingTop="2sp"
+        />
 
-
-<RadioGroup
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/radioGroup"
-    android:orientation="horizontal"
-    android:layout_marginTop="10sp"
-    android:layout_marginBottom="10sp">
-    <RadioButton
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Male"/>
-    <RadioButton
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:text="Date of birth:"
+        android:textSize="12sp"/>
 
-        android:text="Female"/>
-</RadioGroup>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="DD/MM/YYYY - Date of birth"
+        android:hint="DD/MM/YYYY"
         android:ems="10"
         android:inputType="date"
-        android:id="@+id/date"/>
+        android:id="@+id/date"
+        android:paddingTop="2sp"/>
+    <TextView
+        android:layout_marginTop="10sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Gender:"
+        android:textSize="12sp"/>
+    <RadioGroup
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/radioGroup"
+        android:orientation="horizontal"
+        android:layout_marginTop="0sp"
+        android:layout_marginBottom="10sp">
+        <RadioButton
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Male"/>
+        <RadioButton
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="Female"/>
+    </RadioGroup>
 
 <!--
     <EditText
@@ -75,12 +99,33 @@ android:orientation="vertical"
         android:paddingBottom="0sp"/>
    -->
 
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Email:"
+        android:textSize="12sp"/>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:hint="Email"
+        android:id="@+id/email"
+        android:layout_marginBottom="10sp"
+        android:paddingTop="2sp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Password:"
+        android:textSize="12sp"/>
 <EditText
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:hint="Password"
     android:id="@+id/password"
-    android:inputType="textPassword"/>
+    android:inputType="textPassword"
+    android:paddingTop="2sp"/>
 
     <EditText
         android:layout_width="match_parent"
@@ -89,9 +134,13 @@ android:orientation="vertical"
         android:id="@+id/repeatpassword"
         android:inputType="textPassword"/>
 <Button
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="REGISTER"
-    android:id="@+id/register"/>
+    android:layout_marginTop="10sp"
+    android:layout_gravity="center"
+    android:layout_width="150sp"
+    android:layout_height="30sp"
+    android:text="Register"
+    android:id="@+id/register"
+    android:background = "@drawable/rounded_button"
+    />
 
 </LinearLayout>
