--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,31 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SettingsActivity"
+    android:fillViewport="false"
+    tools:context=".SettingsActivity">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="600sp"
     android:padding="20sp"
     android:orientation="vertical">
 
-
-    <Button
-        android:id="@+id/logoutUser"
-        android:layout_width="200sp"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background = "@drawable/rounded_button"
-        android:text="SignOut"
-        android:layout_gravity="center|bottom"
+        android:text="Date of birth:"
+        android:textSize="12sp"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="DD/MM/YYYY"
+        android:ems="10"
+        android:inputType="date"
+        android:id="@+id/date"
+        android:paddingTop="2sp"/>
+
+    <Switch
+        android:id="@+id/mapLocationSwitch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Show my location on map"
         android:layout_marginBottom="10sp"
-        />
-    <Button
-        android:layout_width="200sp"
-        android:layout_height="wrap_content"
-        android:id="@+id/deleteUser"
-        android:text="Delete account"
-        android:background = "@drawable/rounded_button"
-        android:layout_gravity="center|bottom"
+        android:layout_marginTop="10sp"/>
 
-        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="bottom"
+        android:gravity="bottom"
+        android:orientation="vertical"
+        android:padding="10sp"
+       >
 
+        <Button
+            android:id="@+id/logoutUser"
+            android:layout_width="200sp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|bottom"
+            android:layout_marginBottom="10sp"
+            android:background="@drawable/rounded_button"
+            android:text="SignOut" />
+
+        <Button
+            android:id="@+id/deleteUser"
+            android:layout_width="200sp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|bottom"
+            android:background="@drawable/rounded_button"
+        android:layout_marginBottom="10sp"
+            android:text="Delete account"
+
+            />
+
+    </LinearLayout>
 </LinearLayout>
+</ScrollView>
