--- a/app/src/main/res/layout/item_matches.xml
+++ b/app/src/main/res/layout/item_matches.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:padding="20sp">
+    android:paddingTop="10sp"
+    android:paddingBottom="10sp">
 
     <!--
     <de.hdodenhof.circleimageview.CircleImageView
