--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -66,12 +66,13 @@
            android:layout_toRightOf="@+id/backButton"-->
 
         </RelativeLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@android:color/darker_gray"/>
+
     </androidx.appcompat.widget.Toolbar>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#EEEAEAEA"/>
     <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
