--- a/app/src/main/res/layout/fragment_tags_manager.xml
+++ b/app/src/main/res/layout/fragment_tags_manager.xml
@@ -60,6 +60,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#EEEAEAEA"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -70,6 +74,7 @@
             android:paddingTop="10sp"
             android:paddingBottom="10sp"
             >
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
