--- a/app/src/main/res/layout/activity_matches.xml
+++ b/app/src/main/res/layout/activity_matches.xml
@@ -12,7 +12,11 @@
         android:orientation="vertical"
 
         android:padding="5sp">
-
+        <Button android:id="@+id/back"
+            android:layout_width="50sp"
+            android:layout_height="50sp"
+            android:text="Back!"
+            android:onClick="onBack" />
 
         <ImageView
             android:layout_width="match_parent"
