--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -9,6 +9,11 @@
     android:orientation="vertical"
 
     tools:context=".LocationActivity">
+    <Button android:id="@+id/back"
+        android:layout_width="50sp"
+        android:layout_height="50sp"
+        android:text="Back!"
+        android:onClick="onBack" />
     <fragment
 
         android:layout_width="match_parent"
