--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -12,7 +12,11 @@
     android:layout_height="600sp"
     android:padding="20sp"
     android:orientation="vertical">
-
+    <Button android:id="@+id/back"
+        android:layout_width="50sp"
+        android:layout_height="50sp"
+        android:text="Back!"
+        android:onClick="onBack" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
