--- a/app/src/main/res/layout/activity_tag_manager.xml
+++ b/app/src/main/res/layout/activity_tag_manager.xml
@@ -7,7 +7,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".SettingsActivity">
-
+    <Button android:id="@+id/back"
+        android:layout_width="50sp"
+        android:layout_height="50sp"
+        android:text="Back!"
+        android:onClick="onBack" />
 
 
     <com.google.android.material.tabs.TabLayout
