--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -40,6 +40,14 @@
         android:layout_marginBottom="10sp"
         android:layout_marginTop="10sp"/>
 
+    <Switch
+        android:id="@+id/sortUsersByDistance"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Sort users by distance"
+        android:layout_marginBottom="10sp"
+        android:layout_marginTop="10sp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
